--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -19,6 +19,6 @@ jobs:
         run: |
           pip install -r requirements.txt  # Install dependencies from requirements.txt
 
-      - name: Run Unit Tests
+      - name: Run Tests with pytest
         run: |
-          python -m unittest discover -s tests  # Discover and run tests in the 'tests' directory
+          pytest
