--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,34 @@
+#test
 pytest
-numpy
+
+# Data Analysis
 pandas
+numpy
+matplotlib
+seaborn
+scipy
+
+# Machine Learning
+scikit-learn
+nltk
+textblob
+
+# Financial Data
+yfinance
+pynance
+TA-Lib
+
+# Natural Language Processing
+spacy
+gensim
+
+# Visualization
+plotly
+dash
+
+# Time Series
+prophet
+
+# Miscellaneous
+jupyter
+
